[package]
name = "okapi-response-mac"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Alexander Apatiga <dapatiga@gmail.com>"]
homepage = "https://www.pickupleague.com/"
readme = "readme.md"
repository = "https://github.com/morphytron/okapi-response-macro.git"


[lib]
name="okapi_response_mac"
path = "src/lib.rs"
crate-type = ["lib"]


[dependencies]